Fix text overflow on mobile screens, add aria labels for navigation

--- a/client/components/ContactsPage/ContactsPage.module.scss
+++ b/client/components/ContactsPage/ContactsPage.module.scss
@@ -8,7 +8,7 @@
     display: flex;
     overflow: hidden;
     flex-direction: column;
-    height: 70vh;
+    min-height: 70vh;
     .info {
       display: flex;
       justify-content: center;
