--- a/client/components/ServicePage/ServicePage.module.scss
+++ b/client/components/ServicePage/ServicePage.module.scss
@@ -11,6 +11,9 @@
     .descriptionContainer {
       padding: 3.5rem;
       flex: 50%;
+      @media only screen and (max-width: $desktop-wide) {
+        padding: 2.5rem;
+      }
       p {
         font-size: 0.9rem;
         @media only screen and (max-width: $desktop-wide) {
